# threadpool-component

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
examples/example1/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  pool.cpp  pool_factory.cpp
src/include/thread/: pool.h  pool_factory.h
src/include/thread/handlers/: pool_handler.h  task_handler.h
src/include/thread/interfaces/: pool_factory_interface.h  pool_interface.h
tests/: CMakeLists.txt  main.cpp
tests/unit/: pool_factory_test.cpp
